Force the background

--- a/config/custom.css
+++ b/config/custom.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(http://images.forwallpaper.com/files/images/c/c75d/c75d34d8/319146/circles-color-background.jpg);
+    background-image: url(http://images.forwallpaper.com/files/images/c/c75d/c75d34d8/319146/circles-color-background.jpg) !important;
 }
 
 .roomlist {
