Change chat font

--- a/config/custom.css
+++ b/config/custom.css
@@ -18,5 +18,5 @@ body {
 
 .chat-log {
     font-size: 8pt !important;
-    font-family: "Museo Sans Rounded" !important;
+    font-family: "Futura PT Condensed" !important;
 }
