--- a/config/custom.css
+++ b/config/custom.css
@@ -304,7 +304,7 @@ a.ilink {
 }
 
 body {
-    background: url("http://i.imgur.com/AvJdo8k.png") no-repeat;
+    background: url("http://i.imgur.com/0twRdYj.png") no-repeat;
     background-color: #000;
 }
 
