--- a/config/custom.css
+++ b/config/custom.css
@@ -17,5 +17,17 @@ body {
 }
 
 .chat-log {
-    font-family: "Lucida Console" !important;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.userlist {
+    background-color: lime;
+}
+
+.button {
+    color: black;
+}
+
+.button .big {
+    color: black;
 }
