--- a/config/custom.css
+++ b/config/custom.css
@@ -25,9 +25,9 @@ body {
 }
 
 .button {
-    color: black;
+    background-color: black;
 }
 
 .button .big {
-    color: black;
+    background-color: black;
 }
