--- a/config/custom.css
+++ b/config/custom.css
@@ -26,20 +26,15 @@ body {
 }
 
 .menugroup .button {
-    background-color: black;
+    background: -webkit-gradient(linear,left top,left bottom,from(hsl(210,40%,0%)),to(hsl(210,40%,0%)));
     border-color: aqua;
 }
 
 .menugroup .button.big {
-    background-color: black;
+    background: -webkit-gradient(linear,left top,left bottom,from(hsl(210,40%,0%)),to(hsl(210,40%,0%)));
     border-color: aqua;
 }
     
 .pm-log {
     background-color: white;
-}
-
-.pm-window .pm-window-ktsuya .pm-log {
-    background-color: black;
-    color: white;
 }
