--- a/config/custom.css
+++ b/config/custom.css
@@ -26,12 +26,12 @@ body {
 }
 
 .menugroup .button {
-    background: -webkit-gradient(linear,left top,left bottom,from(hsl(210,40%,0%)),to(hsl(210,40%,0%)));
+    background: black;
     border-color: aqua;
 }
 
 .menugroup .button.big {
-    background: -webkit-gradient(linear,left top,left bottom,from(hsl(210,40%,0%)),to(hsl(210,40%,0%)));
+    background: black;
     border-color: aqua;
 }
     
